# Cowabunga

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
cowabunga/: game.py  highscores.csv  highscores.json
cowabunga/env/: actions.py  env.py  settings.py
cowabunga/env/objects/: cliff.py  cow.py  paddle.py  rect.py
cowabunga/py_game/: game.py  gameover_screen.py  info_page.py  leaderboard.py  main_menu.py  pause_screen.py  states.py
cowabunga/py_game/sprites/: cliff.py  cloud.py  name_textbox.py  paddle.py  sky.py  text.py
cowabunga/pygame/: game.py  gameover_screen.py  info_page.py  leaderboard.py  main_menu.py  pause_screen.py
cowabunga/pygame/sprites/: button.py  cliff.py  cloud.py  cow.py  info_page.py  leaderboard.py  paddle.py  sea.py  sky.py  text.py
cowabunga/scripts/: run_pygame.py
cowabunga/utils/: cliff.py  constants.py  cow.py  paddle.py  utils.py
docs/: index.html
docs/web/: cowabunga.apk
scripts/: main.py
