[tool.poetry]
name = "cowabunga"
version = "0.1.0"
description = ""
authors = ["Nicola Pesaresi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
pygame = "^2.6.1"
pre-commit = "^4.5.0"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
