[tool.poetry]
name = "cowabunga"
version = "0.1.0"
description = ""
authors = ["Nicola Pesaresi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pygbag = "^0.9.2"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
